# edgelab-odds

./: .env.example  LICENSE  README.md  pyproject.toml
data/: README.md
sql/: schema.sql
src/edgelab_odds/: __init__.py  config.py  db.py
src/edgelab_odds/api/: __init__.py  main.py
src/edgelab_odds/api/static/: index.html
src/edgelab_odds/features/: __init__.py  build.py
src/edgelab_odds/ingest/: __init__.py  loader.py  refresh.py  scraper.py
src/edgelab_odds/odds/: __init__.py  odds_api.py
