[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edgelab-odds"
version = "0.1.0"
description = "Sports odds + ML prediction engine with calibrated probabilities, closing-line benchmarking, and ROI backtesting."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "duckdb>=0.10.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
    # Scraping
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    # API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "httpx>=0.27.0",     # for FastAPI TestClient
]

[project.scripts]
edgelab-serve = "edgelab_odds.api.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/edgelab_odds"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=edgelab_odds --cov-report=term-missing"
